# goldilocks

./: .coveragerc  .gitignore  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml
docs/: chat_llm.md  data-availiability.md  data-generation-approach.md  deterministic.md  for-developers.md  index.md  installation.md  intro.md  kpoints.md  license.md  related-research.md  ui-guide.md
src/qe_input/: Crystal-vis-test.ipynb  Kspacing_test.ipynb  QE_input.py  data_utils.py  kspacing_model.py  utils.py
src/qe_input/cgcnn/cgcnn_data/: 0.cif
src/qe_input/models/: alignn.py  atom_features_utils.py  cgcnn.py  cgcnn_graph.py  compound_features_utils.py
src/qe_input/pages/: Chatbot_generator.py  Deterministic_generator.py  Documentation.py  Intro.py  README.py
src/qe_input/temp/: qe.in
tests/: Chatbot_generator_test.py  Intro_test.py  QE_input_test.py  alignn_graph_test.py  alignn_test.py  atom_features_utils_test.py  cgcnn_graph_test.py  cgcnn_test.py  compound_features_utils_test.py  data_utils_test.py  k_spacing_model_test.py  utils_test.py
